readme追加、fontawesomeとmaterializeの読み込み

--- a/public/home.html
+++ b/public/home.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>ホーム</title>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+    <script src="https://use.fontawesome.com/4bf080d198.js"></script>
+    <link rel="stylesheet" href="./common.css">
 </head>
 <body>
-    <h1>ホーム</h1>
+    <div class="l-header">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
 
+    <div class="l-pageArea">
+        <section class="session">
+            <div class="session_date">1/1（金）</div>
+            <div class="session_fullEmpty">
+                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i></div>
+        </section>
+    </div>
 </body>
 </html>
