トップページのhtmlコーディングは終わり

--- a/public/home.html
+++ b/public/home.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <title>ホーム</title>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
@@ -14,10 +15,34 @@
     </div>
 
     <div class="l-pageArea">
+        <section class="sessio
+            <div class="session_date">1/1（金）</div>
+            <div class="session_fullEmpty">
+                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+            </div>
+            <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
+            <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
+            <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
+        </section>
+
         <section class="session">
             <div class="session_date">1/1（金）</div>
             <div class="session_fullEmpty">
-                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i></div>
+                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+            </div>
+            <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
+            <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
+            <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
+        </section>
+
+        <section class="session">
+            <div class="session_date">1/1（金）</div>
+            <div class="session_fullEmpty">
+                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+            </div>
+            <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
+            <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
+            <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
         </section>
     </div>
 </body>
