--- a/public/home.html
+++ b/public/home.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="l-pageArea">
-        <section class="sessio
+        <section class="session">
             <div class="session_date">1/1（金）</div>
             <div class="session_fullEmpty">
                 参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
