--- a/public/home.html
+++ b/public/home.html
@@ -14,7 +14,7 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
 
-    <div class="l-pageArea">
+    <div class="l-pageArea--home">
         <section class="session">
             <div class="session_date">1/1（金）</div>
             <div class="session_fullEmpty">
