勉強会詳細ページのHTMLおわり

--- a/public/sessionDetail.html
+++ b/public/sessionDetail.html
@@ -2,16 +2,51 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <title>勉強会詳細</title>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
     <link rel="stylesheet" href="./common.css">
-
-
 </head>
 <body>
-<h1>ホーム</h1>
+    <div class="l-header">
+        <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        <i class="fa fa-share-alt" aria-hidden="true"></i>
+    </div>
+
+    <div class="l-pageArea--sessionDetail">
+        <div class="sessionDate">1/1（金）</div>
+        <div class="sessionFullEmpty">
+            参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+        </div>
+        <h1 class="sessionTitle">Webデザインもしゃもしゃ会</h1>
+        <p class="sessionCatch">模写してデザインの仕組みを学ぶ。Webデザインのもしゃもしゃ会。</p>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <a href="" class="sessionPlace">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</a>
+        <a class="sessionApply waves-effect waves-light btn">申し込む</a>
+        <table class="sessionInformation bordered">
+            <tr>
+                <th>定員</th>
+                <td>30人</td>
+            </tr>
+            <tr>
+                <th>参加者数</th>
+                <td>10人</td>
+            </tr>
+            <tr>
+                <th>補欠者数</th>
+                <td>0人</td>
+            </tr>
+            <tr>
+                <th>管理者</th>
+                <td>mikakane</td>
+            </tr>
+        </table>
+
+
+
+    </div>
 
 </body>
 </html>
