レイアウトのクラス名を修正

--- a/public/sessionDetail.html
+++ b/public/sessionDetail.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./common.css">
 </head>
 <body>
-    <div class="l-header">
+    <div class="l-header--detail">
         <i class="fa fa-arrow-left" aria-hidden="true"></i>
         <i class="fa fa-share-alt" aria-hidden="true"></i>
     </div>
