--- a/public/contact.html
+++ b/public/contact.html
@@ -2,16 +2,27 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <title>ホーム</title>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
     <link rel="stylesheet" href="./common.css">
-
-
 </head>
 <body>
-<h1>ホーム</h1>
+    <div class="l-header">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+
+    <div class="l-pageArea--contact">
+        <img class="kfugLogo" src="http://placehold.it/350x150" alt="">
+        <p class="description">お問い合わせは以下よりお願い致します。</p>
+
+        <p class="sns--connpass">Connpass：</p><a class="snsLink--connpass" href="http://kfug.connpass.com/">http://kfug.connpass.com/</a>
+        <p class="sns--facebook">Facebook：</p><a class="snsLink--facebook" href="https://www.facebook.com/groups/kansai.frontend/">https://www.facebook.com/groups/kansai.frontend/</a>
+        <p class="sns--twitter">Twitter：</p><a class="snsLink--twitter" href="https://twitter.com/frontkansai">https://twitter.com/frontkansai</a>
+
+    </div>
 
 </body>
 </html>
