概要までのGrid適応終わり

--- a/public/sessionDetail.html
+++ b/public/sessionDetail.html
@@ -11,38 +11,76 @@
 </head>
 <body>
     <div class="l-header--detail">
-        <i class="fa fa-arrow-left" aria-hidden="true"></i>
-        <i class="fa fa-share-alt" aria-hidden="true"></i>
+        <div class="row">
+            <div class="col s1">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </div>
+            <div class="col s1 offset-s10">
+                <i class="fa fa-share-alt" aria-hidden="true"></i>
+            </div>
+        </div>
     </div>
 
     <div class="l-pageArea--sessionDetail">
-        <div class="sessionDate">1/1（金）</div>
-        <div class="sessionFullEmpty">
-            参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+        <div class="row">
+            <div class="col s4">
+                <div class="sessionDate">1/1（金）</div>
+            </div>
+            <div class="col s4">
+                <div class="sessionFullEmpty">
+                    参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+                </div>
+            </div>
         </div>
-        <h1 class="sessionTitle">Webデザインもしゃもしゃ会</h1>
-        <p class="sessionCatch">模写してデザインの仕組みを学ぶ。Webデザインのもしゃもしゃ会。</p>
-        <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <a href="" class="sessionPlace">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</a>
-        <a class="sessionApply waves-effect waves-light btn">申し込む</a>
-        <table class="sessionInformation bordered">
-            <tr>
-                <th>定員</th>
-                <td>30人</td>
-            </tr>
-            <tr>
-                <th>参加者数</th>
-                <td>10人</td>
-            </tr>
-            <tr>
-                <th>補欠者数</th>
-                <td>0人</td>
-            </tr>
-            <tr>
-                <th>管理者</th>
-                <td>mikakane</td>
-            </tr>
-        </table>
+
+        <div class="row">
+            <div class="col s12">
+                <h1 class="sessionTitle">Webデザインもしゃもしゃ会</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <p class="sessionCatch">模写してデザインの仕組みを学ぶ。Webデザインのもしゃもしゃ会。</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <a href="" class="sessionAddress">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</a>
+                <p class="sessionPlace">&nbsp;&nbsp;&nbsp;株式会社chatbox</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s8 offset-s2">
+                <a class="sessionApply waves-effect waves-light btn">申し込む</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <table class="sessionInformation bordered">
+                    <tr>
+                        <th>定員</th>
+                        <td>30人</td>
+                    </tr>
+                    <tr>
+                        <th>参加者数</th>
+                        <td>10人</td>
+                    </tr>
+                    <tr>
+                        <th>補欠者数</th>
+                        <td>0人</td>
+                    </tr>
+                    <tr>
+                        <th>管理者</th>
+                        <td>mikakane</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
 
 
 
