--- a/public/home.html
+++ b/public/home.html
@@ -11,39 +11,62 @@
 </head>
 <body>
     <div class="l-header">
-        <i class="fa fa-bars" aria-hidden="true"></i>
+        <div class="row">
+            <div class="col s1">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+        </div>
     </div>
 
     <div class="l-pageArea--home">
         <section class="session">
-            <div class="session_date">1/1（金）</div>
-            <div class="session_fullEmpty">
-                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+            <div class="row">
+                <div class="col s4">
+                    <div class="session_date">1/1<br>（金）</div>
+                </div>
+                <div class="col s8">
+                    <div class="session_fullEmpty">
+                        参加可能&nbsp;<i class="fa fa-circle-o" aria-hidden="true"></i>
+                    </div>
+                    <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
+                    <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
+                    <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
+                </div>
             </div>
-            <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
-            <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
-            <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
         </section>
 
         <section class="session">
-            <div class="session_date">1/1（金）</div>
-            <div class="session_fullEmpty">
-                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+            <div class="row">
+                <div class="col s4">
+                    <div class="session_date">1/1<br>（金）</div>
+                </div>
+                <div class="col s8">
+                    <div class="session_fullEmpty">
+                        参加可能&nbsp;<i class="fa fa-circle-o" aria-hidden="true"></i>
+                    </div>
+                    <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
+                    <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
+                    <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
+                </div>
             </div>
-            <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
-            <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
-            <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
         </section>
 
         <section class="session">
-            <div class="session_date">1/1（金）</div>
-            <div class="session_fullEmpty">
-                参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+            <div class="row">
+                <div class="col s4">
+                    <div class="session_date">1/1<br>（金）</div>
+                </div>
+                <div class="col s8">
+                    <div class="session_fullEmpty">
+                        参加可能&nbsp;<i class="fa fa-circle-o" aria-hidden="true"></i>
+                    </div>
+                    <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
+                    <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
+                    <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
+                </div>
             </div>
-            <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
-            <p class="session_time"><i class="fa fa-clock-o" aria-hidden="true"></i>20:00~</p>
-            <p class="session_place"><i class="fa fa-map-marker" aria-hidden="true"></i>大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
         </section>
+
     </div>
 </body>
 </html>
