とりあえずトップページ終わり

--- a/public/detail.html
+++ b/public/detail.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
-    <link rel="stylesheet" href="./common.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
     <div class="l-header--detail">
@@ -55,7 +55,7 @@
 
         <div class="row">
             <div class="col s8 offset-s2">
-                <a class="sessionApply waves-effect waves-light btn">申し込む</a>
+                <a class="sessionApply deep-orange waves-effect waves-light btn">申し込む</a>
             </div>
         </div>
 
