--- a/public/aboutKFUG.html
+++ b/public/aboutKFUG.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
-    <link rel="stylesheet" href="./common.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
     <div class="l-header">
