一応できた

--- a/public/detail.html
+++ b/public/detail.html
@@ -10,73 +10,68 @@
     <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-    <div class="l-header--detail">
-        <div class="row">
-            <div class="col s1">
-                <i class="fa fa-arrow-left" aria-hidden="true"></i>
-            </div>
-            <div class="col s1 offset-s10">
-                <i class="fa fa-share-alt" aria-hidden="true"></i>
-            </div>
+
+    <nav>
+        <div class="nav-wrapper">
+            <!--<a href="#!" class="brand-logo">Logo</a>-->
+            <a href="./index.html" data-activates="mobile-demo" class="button-collapse">
+                <i class="header_returnBtn fa fa-arrow-left" aria-hidden="true"></i>
+            </a>
         </div>
-    </div>
+    </nav>
 
     <div class="l-pageArea--sessionDetail">
         <div class="row">
-            <div class="col s4">
-                <div class="sessionDate">1/1（金）</div>
+            <div class="col s12 sessionDetail_dateFullEmptyBox">
+                <div class="sessionDetail_date">2016/1/1 (金)</div>
+                <div class="sessionDetail_empty">参加可能</div>
             </div>
-            <div class="col s4">
-                <div class="sessionFullEmpty">
-                    参加可能<i class="fa fa-circle-o" aria-hidden="true"></i>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <h1 class="sessionDetail_title">Webデザインもしゃもしゃ会</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <p class="sessionDetail_catch">模写してデザインの仕組みを学ぶ。Webデザインのもしゃもしゃ会。</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <div class="sessionDetail_addressBox">
+                    <i class="sessionDetail_addressIcon fa fa-map-marker" aria-hidden="true"></i>
+                    <a href="https://goo.gl/maps/oihcC98m8eP2" target="_blank" class="sessionDetail_address">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</a>
                 </div>
+                <a href="http://chatbox-inc.com/" class="sessionDetail_place" target="_blank">株式会社chatbox</a>
             </div>
+        </div>
+
+        <div class="sessionDetail_applyBox">
+            <a href="http://kfug.connpass.com/event/39216/" target="_blank" class="sessionDetail_applyBtn deep-orange waves-effect waves-light btn-large">申し込む</a>
         </div>
 
         <div class="row">
             <div class="col s12">
-                <h1 class="sessionTitle">Webデザインもしゃもしゃ会</h1>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s12">
-                <p class="sessionCatch">模写してデザインの仕組みを学ぶ。Webデザインのもしゃもしゃ会。</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s12">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <a href="" class="sessionAddress">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</a>
-                <p class="sessionPlace">&nbsp;&nbsp;&nbsp;株式会社chatbox</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s8 offset-s2">
-                <a class="sessionApply deep-orange waves-effect waves-light btn">申し込む</a>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s12">
-                <table class="sessionInformation bordered">
+                <table class="sessionDetail_informationTable bordered">
                     <tr>
-                        <th>定員</th>
-                        <td>30人</td>
+                        <th class="sessionDetail_informationTableTh">定員</th>
+                        <td class="sessionDetail_informationTableTd">30人</td>
                     </tr>
                     <tr>
-                        <th>参加者数</th>
-                        <td>10人</td>
+                        <th class="sessionDetail_informationTableTh">参加者数</th>
+                        <td class="sessionDetail_informationTableTd">10人</td>
                     </tr>
                     <tr>
-                        <th>補欠者数</th>
-                        <td>0人</td>
+                        <th class="sessionDetail_informationTableTh">補欠者数</th>
+                        <td class="sessionDetail_informationTableTd">0人</td>
                     </tr>
                     <tr>
-                        <th>管理者</th>
-                        <td>mikakane</td>
+                        <th class="sessionDetail_informationTableTh">管理者</th>
+                        <td class="sessionDetail_informationTableTd">mikakane</td>
                     </tr>
                 </table>
             </div>
