--- a/public/aboutKFUG.html
+++ b/public/aboutKFUG.html
@@ -10,20 +10,34 @@
     <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-    <div class="l-header">
-        <div class="row">
-            <div class="col s1">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </div>
+    <nav>
+        <div class="nav-wrapper">
+            <!--<a href="#!" class="brand-logo">Logo</a>-->
+            <a href="#" data-activates="mobile-demo" class="button-collapse">
+                <i class="header_menuBtn fa fa-bars" aria-hidden="true"></i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">Javascript</a></li>
+                <li><a href="mobile.html">Mobile</a></li>
+            </ul>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">Javascript</a></li>
+                <li><a href="mobile.html">Mobile</a></li>
+            </ul>
         </div>
-    </div>
+    </nav>
+
 
     <div class="l-pageArea--aboutKFUG">
         <!--コミュニティのロゴ、概要-->
         <div class="row">
             <div class="col s12">
-                <img class="kfugLogo" src="http://placehold.it/350x150" alt="">
-                <p class="aboutCommunity">
+                <img class="aboutKFUG_kfugLogo" src="https://connpass-tokyo.s3.amazonaws.com/thumbs/91/21/9121ade023a9530a7bf8a6e0368265bd.png" alt="KFUGロゴ">
+                <p class="aboutKFUG_description">
                     html・CSS・JavaScriptと言ったWebフロント制作界隈のテーマを中心に毎月勉強会やもくもく会などを開催し、技術者同士の情報共有を図っています。<br>
                     エンジニア/デザイナーといった職種の違いや経験の多い少ないを問わず、 Webで生きる全ての人のためのコミュニティとして幅広い層からの参加でコミュニティ運営を進めています。
                 </p>
@@ -37,7 +51,7 @@
                     <div class="row"><div class="aboutSession_title col s12">セッション・セミナー勉強会</div></div>
                     <div class="row">
                         <div class="aboutSession_description col s12">
-                            毎月テーマを決めて通例月の後半の土曜日の午後より大阪市内等の会場で勉強会を開催しています。
+                            毎月テーマを決めて通例<span class="aboutSession_important">月の後半の土曜日の午後</span>より大阪市内等の会場で勉強会を開催しています。
                             （過去のテーマ：JavaScriptフレームワークについて考える / 最近のalt JSについて考える / UI・UXについて考える）<br>
                             企画の相談、会場提供の相談等は随時募集しておりますので、 お気軽にお問い合わせください。<br>
                             各回登壇者調整に時間がかかりがちですので、 10分などの短い時間でも何かしら登壇いただければ非常に助かります！<br>
@@ -55,15 +69,14 @@
                     <div class="row"><div class="aboutMokuMosha_title col s12">もくもく会 / もしゃもしゃ会</div></div>
                     <div class="row">
                         <div class="aboutMokuMosha_description col s12">
-                            もくもく会は、各自課題を持ち寄ってもくもく作業するスタイルの勉強会です。
+                            <span class="aboutMokuMosha_important">もくもく会</span>は、各自課題を持ち寄ってもくもく作業するスタイルの勉強会です。
                             日頃なかなか時間が取れない「新しいことへの挑戦」など、みんなで机を向かい合わせてチャレンジしてみませんか？
-                            通例、第一月曜日19:30から大阪市内の会場で開催しています。<br>
-                            <br>
-                            もしゃもしゃ会は、デザイナー・コーダ向けのもくもく会です。
+                            通例<span class="aboutMokuMosha_important">第一月曜日19:30</span>から大阪市内の会場で開催しています。<br>
+                            <span class="aboutMokuMosha_important">もしゃもしゃ会</span>は、デザイナー・コーダ向けのもくもく会です。
                             気になるサイト、お気に入りのサイトを模写することで新しい気付きがあるかも!?
                             PS/AIなど画像編集ソフトを使ったカンプの模写や、HTML/CSSを用いたコードでの模写などスタイルは自由！
                             デザインスキルUPのための時間づくりに、是非ご参加ください！
-                            通例、第四月曜日19:30から大阪市内の会場で開催しています。
+                            通例<span class="aboutMokuMosha_important">第四月曜日19:30</span>から大阪市内の会場で開催しています。
                         </div>
                     </div>
                 </section>
@@ -78,8 +91,8 @@
                     <div class="row">
                         <div class="aboutEvent_description col s12">
                             年に２回、フロントエンド界隈の技術についてのイベントを開催しています。<br>
-                            夏に開催されるGrand Frontend Osakaは流れの早いフロントエンドの「最新技術」がテーマのイベントです！<br>
-                            春に開催されるFrontend Conferenceは「今すぐ使える技術」をテーマにした初めての方でも楽しめるイベントで、
+                            夏に開催される <span class="aboutEvent_important">Grand Frontend Osaka</span> は流れの早いフロントエンドの「最新技術」がテーマのイベントです！<br>
+                            春に開催される <span class="aboutEvent_important">Frontend Conference</span> は「今すぐ使える技術」をテーマにした初めての方でも楽しめるイベントで、
                             セッション・もくもく会ブース・ハンズオンブースなどコンテンツの幅広さが魅力です。
                         </div>
                     </div>
