--- a/public/contact.html
+++ b/public/contact.html
@@ -10,18 +10,39 @@
     <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-    <div class="l-header">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-    </div>
+    <nav>
+        <div class="nav-wrapper">
+            <!--<a href="#!" class="brand-logo">Logo</a>-->
+            <a href="#" data-activates="mobile-demo" class="button-collapse">
+                <i class="header_menuBtn fa fa-bars" aria-hidden="true"></i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">Javascript</a></li>
+                <li><a href="mobile.html">Mobile</a></li>
+            </ul>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">Javascript</a></li>
+                <li><a href="mobile.html">Mobile</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="l-pageArea--contact">
-        <img class="kfugLogo" src="http://placehold.it/350x150" alt="">
-        <p class="description">お問い合わせは以下よりお願い致します。</p>
+        <div class="row">
+            <div class="col s12">
+                <img class="contact_kfugLogo" src="https://connpass-tokyo.s3.amazonaws.com/thumbs/91/21/9121ade023a9530a7bf8a6e0368265bd.png" alt="KFUGロゴ">
+                <p class="contact_description">お問い合わせは以下よりお願い致します。</p>
 
-        <p class="sns--connpass">Connpass：</p><a class="snsLink--connpass" href="http://kfug.connpass.com/">http://kfug.connpass.com/</a>
-        <p class="sns--facebook">Facebook：</p><a class="snsLink--facebook" href="https://www.facebook.com/groups/kansai.frontend/">https://www.facebook.com/groups/kansai.frontend/</a>
-        <p class="sns--twitter">Twitter：</p><a class="snsLink--twitter" href="https://twitter.com/frontkansai">https://twitter.com/frontkansai</a>
+                <p class="contact_sns--connpass">Connpass</p><a class="snsLink--connpass" href="http://kfug.connpass.com/" target="_blank">http://kfug.connpass.com/</a>
+                <p class="contact_sns--facebook">Facebook</p><a class="snsLink--facebook" href="https://www.facebook.com/groups/kansai.frontend/" target="_blank">https://www.facebook.com/groups/kansai.frontend/</a>
+                <p class="contact_sns--twitter">Twitter</p><a class="snsLink--twitter" href="https://twitter.com/frontkansai" target="_blank">https://twitter.com/frontkansai</a>
 
+            </div>
+        </div>
     </div>
 
 </body>
