--- a/public/contact.html
+++ b/public/contact.html
@@ -8,28 +8,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
     <link rel="stylesheet" href="./css/common.css">
+    <script>
+        $(function(){
+            $(".button-collapse").sideNav();
+        })
+    </script>
 </head>
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <!--<a href="#!" class="brand-logo">Logo</a>-->
-            <a href="#" data-activates="mobile-demo" class="button-collapse">
-                <i class="header_menuBtn fa fa-bars" aria-hidden="true"></i>
-            </a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
-            </ul>
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="l-sideMenu">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#!" class="brand-logo">Logo</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="header_menuBtn fa fa-bars" aria-hidden="true"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="./index.html" style="color: darkslategray">ホーム</a></li>
+                    <li><a href="./aboutKFUG.html" style="color: darkslategray">コミュニティについて</a></li>
+                    <li><a href="./contact.html" style="color: darkslategray">お問い合わせ</a></li>
+                    <!--<li><a href="mobile.html">Mobile</a></li>-->
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="./index.html">ホーム</a></li>
+                    <li><a href="./aboutKFUG.html">コミュニティについて</a></li>
+                    <li><a href="./contact.html">お問い合わせ</a></li>
+                    <!--<li><a href="mobile.html">Mobile</a></li>-->
+                </ul>
+            </div>
+        </nav>
+    </div>
 
     <div class="l-pageArea--contact">
         <div class="row">
