--- a/public/index.html
+++ b/public/index.html
@@ -4,36 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <title>ホーム</title>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js" integrity="sha256-h0cGsrExGgcZtSZ/fRz4AwV+Nn6Urh/3v3jFRQ0w9dQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
     <link rel="stylesheet" href="./css/common.css">
+    <script>
+        $(function(){
+            $(".button-collapse").sideNav();
+        })
+    </script>
 </head>
 <body>
 
-    <!--<div class="l-sideMenu">-->
+    <div class="l-sideMenu">
     <nav>
         <div class="nav-wrapper">
-            <!--<a href="#!" class="brand-logo">Logo</a>-->
-            <a href="#" data-activates="mobile-demo" class="button-collapse">
-                <i class="header_menuBtn fa fa-bars" aria-hidden="true"></i>
-            </a>
+            <a href="#!" class="brand-logo">Logo</a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="header_menuBtn fa fa-bars" aria-hidden="true"></i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
+                <li><a href="./index.html" style="color: darkslategray">ホーム</a></li>
+                <li><a href="./aboutKFUG.html" style="color: darkslategray">コミュニティについて</a></li>
+                <li><a href="./contact.html" style="color: darkslategray">お問い合わせ</a></li>
+                <!--<li><a href="mobile.html">Mobile</a></li>-->
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
+                <li><a href="./index.html">ホーム</a></li>
+                <li><a href="./aboutKFUG.html">コミュニティについて</a></li>
+                <li><a href="./contact.html">お問い合わせ</a></li>
+                <!--<li><a href="mobile.html">Mobile</a></li>-->
             </ul>
         </div>
     </nav>
-    <!--</div>-->
+    </div>
 
     <div class="l-pageArea--home">
         <a href="./detail.html">
