API実装全般（あとはCarbonと参加orキャンセルのみ）

--- a/public/index.html
+++ b/public/index.html
@@ -9,174 +9,131 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
     <link rel="stylesheet" href="./css/common.css">
-    <script>
-        $(function(){
-            $(".button-collapse").sideNav();
-        })
-    </script>
+    <script src="https://cdn.jsdelivr.net/vue/1.0.28/vue.min.js"></script>
+    <script type="text/javascript" src="./common.js"></script>
 </head>
 <body>
 
-    <div class="l-sideMenu">
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Logo</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="header_menuBtn fa fa-bars" aria-hidden="true"></i></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="./index.html" style="color: darkslategray">ホーム</a></li>
-                <li><a href="./aboutKFUG.html" style="color: darkslategray">コミュニティについて</a></li>
-                <li><a href="./contact.html" style="color: darkslategray">お問い合わせ</a></li>
-                <!--<li><a href="mobile.html">Mobile</a></li>-->
-            </ul>
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="./index.html">ホーム</a></li>
-                <li><a href="./aboutKFUG.html">コミュニティについて</a></li>
-                <li><a href="./contact.html">お問い合わせ</a></li>
-                <!--<li><a href="mobile.html">Mobile</a></li>-->
-            </ul>
+<div id="app">
+
+    <div class="l-header">
+        <nav>
+            <div class="nav-wrapper">
+                <a v-if="!isSelected" href="#" data-activates="mobile-demo" class="button-collapse"><i class="header_menuBtn fa fa-bars" aria-hidden="true"></i></a>
+                <a class="header_returnBtnBox" @click="return" v-else>
+                    <i class="header_returnBtn fa fa-arrow-left" aria-hidden="true"></i>
+                </a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="./index.html" style="color: darkslategray">ホーム</a></li>
+                    <li><a href="./aboutKFUG.html" style="color: darkslategray">コミュニティについて</a></li>
+                    <li><a href="./contact.html" style="color: darkslategray">お問い合わせ</a></li>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="./index.html">ホーム</a></li>
+                    <li><a href="./aboutKFUG.html">コミュニティについて</a></li>
+                    <li><a href="./contact.html">お問い合わせ</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <div class="l-pageArea--home" v-if="!isSelected">
+        <ul>
+            <li v-for="post in posts">
+                <a class="sessionLinkBox" @click="route(post)">
+                    <section class="session">
+                        <div class="row">
+                            <div class="col s3">
+                                <div class="session_date">{{post.started_at}}</div>
+                            </div>
+                            <div class="col s9">
+                                <div class="session_empty">
+                                    参加可能
+                                </div>
+                                <h2 class="session_name">{{post.title}}</h2>
+
+                                <div class="session_timeBox">
+                                    <i class="fa fa-clock-o session_timeIcon" aria-hidden="true"></i>
+                                    <p class="session_time">{{post.started_at}}~</p>
+                                </div>
+
+                                <div class="session_placeBox">
+                                    <i class="fa fa-map-marker session_placeIcon" aria-hidden="true"></i>
+                                    <p class="session_place">{{post.address}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="l-pageArea--sessionDetail" v-else>
+        <div class="row">
+            <div class="col s12 sessionDetail_dateFullEmptyBox">
+                <div class="sessionDetail_date">{{postDetail.started_at}}</div>
+                <div class="sessionDetail_empty">参加可能</div>
+            </div>
         </div>
-    </nav>
+
+        <div class="row">
+            <div class="col s12">
+                <h1 class="sessionDetail_title">{{postDetail.title}}</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <p class="sessionDetail_catch">{{postDetail.catch}}</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <div class="sessionDetail_addressBox">
+                    <i class="sessionDetail_addressIcon fa fa-map-marker" aria-hidden="true"></i>
+                    <a href="http://maps.google.com/maps?q={{postDetail.address}}" target="_blank" class="sessionDetail_address">{{postDetail.address}}</a>
+                </div>
+                <p class="sessionDetail_place" target="_blank">{{postDetail.place}}</p>
+            </div>
+        </div>
+
+        <div class="sessionDetail_applyBox">
+            <a href="{{postDetail.event_url}}" target="_blank" class="sessionDetail_applyBtn deep-orange waves-effect waves-light btn-large">申し込む</a>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <table class="sessionDetail_informationTable bordered">
+                    <tr>
+                        <th class="sessionDetail_informationTableTh">定員</th>
+                        <td class="sessionDetail_informationTableTd">{{postDetail.limit}}人</td>
+                    </tr>
+                    <tr>
+                        <th class="sessionDetail_informationTableTh">参加者数</th>
+                        <td class="sessionDetail_informationTableTd">{{postDetail.accepted}}人</td>
+                    </tr>
+                    <tr>
+                        <th class="sessionDetail_informationTableTh">補欠者数</th>
+                        <td class="sessionDetail_informationTableTd">{{postDetail.waiting}}人</td>
+                    </tr>
+                    <tr>
+                        <th class="sessionDetail_informationTableTh">管理者</th>
+                        <td class="sessionDetail_informationTableTd">{{postDetail.owner_nickname}}</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
+</div>
 
-    <div class="l-pageArea--home">
-        <a href="./detail.html">
-            <section class="session">
-                <div class="row">
-                    <div class="col s3">
-                        <div class="session_date">1/1<br>（金）</div>
-                    </div>
-                    <div class="col s9">
-                        <div class="session_empty">
-                            参加可能
-                        </div>
-                        <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
 
-                        <div class="session_timeBox">
-                            <i class="fa fa-clock-o session_timeIcon" aria-hidden="true"></i>
-                            <p class="session_time">20:00~</p>
-                        </div>
 
-                        <div class="session_placeBox">
-                            <i class="fa fa-map-marker session_placeIcon" aria-hidden="true"></i>
-                            <p class="session_place">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </a>
 
-        <a href="./detail.html">
-            <section class="session">
-                <div class="row">
-                    <div class="col s3">
-                        <div class="session_date">1/1<br>（金）</div>
-                    </div>
-                    <div class="col s9">
-                        <div class="session_empty">
-                            参加可能
-                        </div>
-                        <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
-
-                        <div class="session_timeBox">
-                            <i class="fa fa-clock-o session_timeIcon" aria-hidden="true"></i>
-                            <p class="session_time">20:00~</p>
-                        </div>
-
-                        <div class="session_placeBox">
-                            <i class="fa fa-map-marker session_placeIcon" aria-hidden="true"></i>
-                            <p class="session_place">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </a>
-
-        <a href="./detail.html">
-            <section class="session">
-                <div class="row">
-                    <div class="col s3">
-                        <div class="session_date">1/1<br>（金）</div>
-                    </div>
-                    <div class="col s9">
-                        <div class="session_empty">
-                            参加可能
-                        </div>
-                        <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
-
-                        <div class="session_timeBox">
-                            <i class="fa fa-clock-o session_timeIcon" aria-hidden="true"></i>
-                            <p class="session_time">20:00~</p>
-                        </div>
-
-                        <div class="session_placeBox">
-                            <i class="fa fa-map-marker session_placeIcon" aria-hidden="true"></i>
-                            <p class="session_place">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </a>
-
-        <a href="./detail.html">
-            <section class="session">
-                <div class="row">
-                    <div class="col s3">
-                        <div class="session_date">1/1<br>（金）</div>
-                    </div>
-                    <div class="col s9">
-                        <div class="session_empty">
-                            参加可能
-                        </div>
-                        <h2 class="session_name">Webデザインもしゃもしゃ会</h2>
-
-                        <div class="session_timeBox">
-                            <i class="fa fa-clock-o session_timeIcon" aria-hidden="true"></i>
-                            <p class="session_time">20:00~</p>
-                        </div>
-
-                        <div class="session_placeBox">
-                            <i class="fa fa-map-marker session_placeIcon" aria-hidden="true"></i>
-                            <p class="session_place">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </a>
-
-        <a href="./detail.html">
-            <section class="session">
-                <div class="row">
-                    <div class="col s3">
-                        <div class="session_date">1/2<br>（土）</div>
-                    </div>
-                    <div class="col s9">
-                        <div class="session_full">
-                            キャンセル待ち
-                        </div>
-                        <h2 class="session_name">Webデザインもくもく会</h2>
-
-                        <div class="session_timeBox">
-                            <i class="fa fa-clock-o session_timeIcon" aria-hidden="true"></i>
-                            <p class="session_time">20:00~</p>
-                        </div>
-
-                        <div class="session_placeBox">
-                            <i class="fa fa-map-marker session_placeIcon" aria-hidden="true"></i>
-                            <p class="session_place">大阪市中央区瓦町3-2-10エスティメゾン瓦町805</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </a>
-
-    </div>
     <script>
         $(function(){
             $(".button-collapse").sideNav();
-
-            $.get("/data.json").done(function(data){
-                console.log(data)
-            })
         })
     </script>
 
