--- a/public/detail.html
+++ b/public/detail.html
@@ -8,23 +8,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/4bf080d198.js"></script>
     <link rel="stylesheet" href="./css/common.css">
+    <script src="https://cdn.jsdelivr.net/vue/1.0.28/vue.min.js"></script>
+    <script type="text/javascript" src="./common.js"></script>
 </head>
 <body>
 
     <nav>
         <div class="nav-wrapper">
             <!--<a href="#!" class="brand-logo">Logo</a>-->
-            <a href="./index.html" data-activates="mobile-demo" class="button-collapse">
+            <a href="./index.html" class="">
                 <i class="header_returnBtn fa fa-arrow-left" aria-hidden="true"></i>
             </a>
         </div>
     </nav>
 
-    <div class="l-pageArea--sessionDetail">
+    <div id="detail" class="l-pageArea--sessionDetail">
         <div class="row">
             <div class="col s12 sessionDetail_dateFullEmptyBox">
                 <div class="sessionDetail_date">2016/1/1 (金)</div>
-                <div class="sessionDetail_empty">参加可能</div>
+                <div class="sessionDetail_empty">参加可能{{post}}</div>
             </div>
         </div>
 
@@ -76,9 +78,6 @@
                 </table>
             </div>
         </div>
-
-
-
     </div>
 
 </body>
